src/app/core/header/header.scss
.header-container {
  height: 50px;
  width: 100%;

  display: flex;

  font-size: 15px;
}

.header-split {
  height: 100%;
  width: 100%;
  overflow: hidden;

  display: flex;
  align-items: center;
}

.right-part {
  justify-content: start;
}

.left-part {
  justify-content: end;
}

.coffee-icon {
  display: flex;
  justify-content: center;
  align-items: center;

  color: white;
  height: 25px;
  fill: transparent;
}

.home-icon {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 15px;
  fill: white;
  margin-bottom: 5px;

}


.paw-icon {
  display: flex;
  justify-content: center;
  align-items: center;

  color: white;
  fill: transparent;

  height: 25px;
}

